Implemented all dto converters.